--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -30,8 +30,8 @@
     margin: 0 0.43em;
 
     @include mq(tablet) {
-        width: 8.28px;
-        height: 8.28px;
+        width: .51em;
+        height: .51em;
         margin: 0 0.4em;
     }
 }
