--- a/src/styles/components/_cta.scss
+++ b/src/styles/components/_cta.scss
@@ -7,7 +7,7 @@
 }
 
 .c-cta__desc {
-    max-width: 450px;
+    max-width: 32.11em;
     margin: 0 auto 2.22em;
     color: #767676;
     @include font-size(18px,26px);
