--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -23,8 +23,8 @@
 
 .c-modal__content {
   margin: auto; /* 1 */
-  padding: 30px;
-  width: 350px;
+  padding: 1.87em;
+  width: 21.87em;
   z-index: 2; /* 2 */
   position: relative; /* 2 */
   background-color: white; /* 3 */
