--- a/src/styles/components/_story.scss
+++ b/src/styles/components/_story.scss
@@ -12,11 +12,14 @@
 }
 
 .c-story {
-    max-width: 510px;
+    max-width: 36.18em;
     margin: auto;
     padding: 2em;
     background-color: #fff;
     box-shadow: 3px 3px 11px 0px #00000014;
+    @include mq(desktop) {
+        max-width: 36.5em;
+    }
 }
 
 .c-story__text {
@@ -41,7 +44,6 @@
     align-items: center;
     background-color: #060606;
     position: absolute;
-    padding: 10px;
     right: 50%;
     bottom: 0;
     transform: translate(50%, 50%);
